<resources>
    <string name="app_name">Pimatic</string>
    <string name="account_manager_label">Pimatic</string>

    <!-- Sign In -->
    <string name="Sign_in_to_Pimatic">Sign in to Pimatic</string>
    <string name="Host">Host</string>
    <string name="host_hint">demo.pimatic.org</string>
    <string name="Port">Port</string>
    <string name="port_hint">80</string>
    <string name="SSL">SSL</string>
    <string name="Auth">Auth</string>
    <string name="Username_hint">Username</string>
    <string name="Password_hint">Password</string>

    <!-- Overflow menu items -->
    <string name="action_settings">Settings</string>

    <!-- Navigation items -->
    <string name="Add_Account">Add Account</string>
    <string name="Manage_Accounts">Manage Accounts</string>
    <string name="Rules">Rules</string>
    <string name="Variables">Variables</string>
    <string name="Messages">Messages</string>
    <string name="Events">Events</string>
    <string name="Connections">Connections</string>

    <!-- Name for group of devices with no specific group -->
    <string name="Ungrouped">Ungrouped</string>

    <!-- Devices -->
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="Unknown">Unknown</string>
    <string name="unknown_number">—</string>

</resources>
