<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_height="96dp"
        android:layout_width="match_parent"
        android:background="@color/primary">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="start|bottom"
            android:text="@string/Sign_in_to_Pimatic"
            android:textColor="#ffffff"
            android:padding="16dp"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/save"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_action_done" />

    </FrameLayout>

    <TextView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dddddd"
        android:padding="8dp"
        android:gravity="center"
        android:textColor="#808080"
        tools:text="https://demo.pimatic.org:80"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginLeft="8dp"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:text="@string/SSL"/>

            <CheckBox
                android:id="@+id/ssl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textSize="12sp"
                android:includeFontPadding="false"
                android:text="@string/Host"/>

            <EditText
                android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host_hint"
                android:textSize="16sp"
                android:singleLine="true"
                android:nextFocusForward="@+id/port"
                android:imeOptions="actionNext"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="72dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:text="@string/Port"/>

            <EditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port_hint"
                android:textSize="16sp"
                android:singleLine="true"
                android:nextFocusForward="@+id/username"
                android:imeOptions="actionNext"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:includeFontPadding="false"
            android:textSize="12sp"
            android:text="@string/Auth"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username_hint"
            android:textSize="16sp"
            android:singleLine="true"
            android:nextFocusForward="@+id/password"
            android:imeOptions="actionNext"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="@string/Password_hint"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    </FrameLayout>

</LinearLayout>
